--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             </div>
 
           </section>
+
            <section>
             <div class="card">
                 <div class="fast-card">
@@ -65,25 +66,51 @@
                 </div>
                 <div class="fast-card">
                 <div class="card-icon">
-                <img src="./assets/Vector.png" alt="">
+                <img src="./assets/Bookmarks.png" alt="">
                 </div>
-                <h1>Scattered notes</h1>
-                <p>Your ideas live in 10 different apps, none of them connected.</p> 
-                </div>
-                <div class="fast-card">
-                <div class="card-icon">
-                <img src="./assets/Vector.png" alt="">
-                </div>
-                <h1>Scattered notes</h1>
-                <p>Your ideas live in 10 different apps, none of them connected.</p> 
+                <h1>Bookmark overload</h1>
+                <p>Hundreds of saved links you'll never revisit or remember.</p> 
                 </div>
                 <div class="fast-card">
                 <div class="card-icon">
-                <img src="./assets/Vector.png" alt="">
+                <img src="./assets/Brain.png" alt="">
                 </div>
-                <h1>Scattered notes</h1>
-                <p>Your ideas live in 10 different apps, none of them connected.</p> 
+                <h1>No idea connections</h1>
+                <p>Insights stay isolated, never building into bigger understanding.</p> 
                 </div>
+                <div class="fast-card">
+                <div class="card-icon">
+                <img src="./assets/Info.png" alt="">
+                </div>
+                <h1>Forgetting what you learned</h1>
+                <p>Knowledge fades because there's no system to retain it.</p> 
+                </div>
+
+            </div>
+           </section>
+
+           <section>
+        <div class="banner">
+            <div>
+                <img src="./assets/knowledge.png" alt="">
+            </div>
+            <div class="banner-contain">
+                <h5>The Solution</h5>
+                <h1>Your second brain, <br>
+                structured by design.</h1>
+                <p>Personal Knowledge Vault isn't another note-taking app. z It's a thinking environment where every note, link, and summary becomes part of an interconnected web of understanding.</p>
+
+            <div class="banner-text"><img src="./assets/CheckCircle.png" alt=""> Capture ideas with structure built-in from day one</div>
+            <div class="banner-text"><img src="./assets/CheckCircle.png" alt=""> Connect related concepts automatically as you write</div>
+            <div class="banner-text"><img src="./assets/CheckCircle.png" alt=""> Build lasting knowledge through reflection prompts</div>
+            <div class="banner-text"><img src="./assets/CheckCircle.png" alt=""> Find anything instantly with semantic search</div>
+            </div>
+            
+        </div>
+           </section>
+
+           <section>
+            <div class="last-main">
 
             </div>
            </section>
