challenge part add

--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
 
            <section>
             <div class="last-main">
+                <h1>Ready to think more clearly?</h1>
+                <p>Join thousands of learners who are building their personal knowledge vaults.Start free, no credit card required.</p>
+                <button class="main-btn">Get Early Access <img src="./assets/ArrowRight.png" alt=""> </button>
+                <p>Free during early access • No credit card needed/p>
 
             </div>
            </section>
