bg img recovery

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="button-parent">
                     <div>
                         <button class="hero-btn1">
-                        Start Building Your Vault  <img src="./assets/ArrowRight.png" </button>
+                        Start Building Your Vault  <img src="./assets/ArrowRight.png"></button>
                     </div>
                     <div>   
                         <button class="hero-btn2"><img src="./assets/" alt=""> See How It Works</button>
@@ -114,7 +114,7 @@
                 <h1>Ready to think more clearly?</h1>
                 <p>Join thousands of learners who are building their personal knowledge vaults.Start free, no credit card required.</p>
                 <button class="main-btn">Get Early Access <img src="./assets/ArrowRight.png" alt=""> </button>
-                <p>Free during early access • No credit card needed/p>
+                <p>Free during early access • No credit card needed </p>
 
             </div>
            </section>
