--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 1</title>
     <link rel="stylesheet" href="./style/style.css">
 </head>
+
 <body>
-    <header >
+    <header>
         <div class="nav-ber">
             <div>
                 <img src="./assets/logo-navbar.png" alt="">
@@ -20,15 +22,15 @@
                 </ul>
             </div>
             <div class="btn">
-                <button >Get Early Access</button>
+                <button>Get Early Access</button>
             </div>
         </div>
     </header>
     <main>
         <section class="hero">
             <div class="hero-img-text">
-                <div>
-                    <h4>Early Access Now Open</h4>
+                <div class="icon-hero">
+                    <h4> <img src="./assets/hedar-icon.png" alt=""> Early Access Now Open</h4>
                     <h1> Structured thinking,<br><span class="color-text">Not just note-taking.</span></h1>
                 </div>
                 <div>
@@ -38,89 +40,117 @@
                 <div class="button-parent">
                     <div>
                         <button class="hero-btn1">
-                        Start Building Your Vault  <img src="./assets/ArrowRight.png"></button>
+                            Start Building Your Vault <img src="./assets/ArrowRight.png"></button>
                     </div>
-                    <div>   
-                        <button class="hero-btn2"><img src="./assets/" alt=""> See How It Works</button>
+                    <div>
+                        <button class="hero-btn2">
+                            <img src="./assets/play-icon.png" alt="">
+                            See How It Works</button>
                     </div>
                 </div>
             </div>
-          </section>
+        </section>
 
-          <section >
+        <section>
             <div class="main-content">
                 <h1>Notes don't fail, Structure does.</h1>
                 <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
             </div>
 
-          </section>
+        </section>
 
-           <section>
+        <section>
             <div class="card">
                 <div class="fast-card">
-                <div class="card-icon">
-                <img src="./assets/Vector.png" alt="">
-                </div>
-                <h1>Scattered notes</h1>
-                <p>Your ideas live in 10 different apps, none of them connected.</p> 
-                </div>
-                <div class="fast-card">
-                <div class="card-icon">
-                <img src="./assets/Bookmarks.png" alt="">
-                </div>
-                <h1>Bookmark overload</h1>
-                <p>Hundreds of saved links you'll never revisit or remember.</p> 
+                    <div class="card-icon">
+                        <img src="./assets/Vector.png" alt="">
+                    </div>
+                    <h1>Scattered notes</h1>
+                    <p>Your ideas live in 10 different apps, none of them connected.</p>
                 </div>
                 <div class="fast-card">
-                <div class="card-icon">
-                <img src="./assets/Brain.png" alt="">
-                </div>
-                <h1>No idea connections</h1>
-                <p>Insights stay isolated, never building into bigger understanding.</p> 
+                    <div class="card-icon">
+                        <img src="./assets/Bookmarks.png" alt="">
+                    </div>
+                    <h1>Bookmark overload</h1>
+                    <p>Hundreds of saved links you'll never revisit or remember.</p>
                 </div>
                 <div class="fast-card">
-                <div class="card-icon">
-                <img src="./assets/Info.png" alt="">
+                    <div class="card-icon">
+                        <img src="./assets/Brain.png" alt="">
+                    </div>
+                    <h1>No idea connections</h1>
+                    <p>Insights stay isolated, never building into bigger understanding.</p>
                 </div>
-                <h1>Forgetting what you learned</h1>
-                <p>Knowledge fades because there's no system to retain it.</p> 
+                <div class="fast-card">
+                    <div class="card-icon">
+                        <img src="./assets/Info.png" alt="">
+                    </div>
+                    <h1>Forgetting what you learned</h1>
+                    <p>Knowledge fades because there's no system to retain it.</p>
                 </div>
 
             </div>
-           </section>
+        </section>
 
-           <section>
-        <div class="banner">
-            <div>
-                <img src="./assets/knowledge.png" alt="">
+        <section>
+            <div class="banner">
+                <div>
+                    <img src="./assets/knowledge.png" alt="">
+                </div>
+                <div class="banner-contain">
+                    <h5>THE SOLUTION</h5>
+                    <h1>Your second brain, <br>
+                        structured by design.</h1>
+                    <p>Personal Knowledge Vault isn't another note-taking app. z It's a thinking environment where every
+                        note, link, and summary becomes part of an interconnected web of understanding.</p>
+
+                    <div class="banner-text"><img src="./assets/CheckCircle.png" alt=""> Capture ideas with structure
+                        built-in from day one</div>
+                    <div class="banner-text"><img src="./assets/CheckCircle.png" alt=""> Connect related concepts
+                        automatically as you write</div>
+                    <div class="banner-text"><img src="./assets/CheckCircle.png" alt=""> Build lasting knowledge through
+                        reflection prompts</div>
+                    <div class="banner-text"><img src="./assets/CheckCircle.png" alt=""> Find anything instantly with
+                        semantic search</div>
+                </div>
+
             </div>
-            <div class="banner-contain">
-                <h5>The Solution</h5>
-                <h1>Your second brain, <br>
-                structured by design.</h1>
-                <p>Personal Knowledge Vault isn't another note-taking app. z It's a thinking environment where every note, link, and summary becomes part of an interconnected web of understanding.</p>
+        </section>
 
-            <div class="banner-text"><img src="./assets/CheckCircle.png" alt=""> Capture ideas with structure built-in from day one</div>
-            <div class="banner-text"><img src="./assets/CheckCircle.png" alt=""> Connect related concepts automatically as you write</div>
-            <div class="banner-text"><img src="./assets/CheckCircle.png" alt=""> Build lasting knowledge through reflection prompts</div>
-            <div class="banner-text"><img src="./assets/CheckCircle.png" alt=""> Find anything instantly with semantic search</div>
-            </div>
-            
-        </div>
-           </section>
-
-           <section>
+        <section>
             <div class="last-main">
                 <h1>Ready to think more clearly?</h1>
-                <p>Join thousands of learners who are building their personal knowledge vaults.Start free, no credit card required.</p>
+                <p>Join thousands of learners who are building their personal knowledge vaults. <br>Start free, no
+                    credit card required.</p>
                 <button class="main-btn">Get Early Access <img src="./assets/ArrowRight.png" alt=""> </button>
                 <p>Free during early access • No credit card needed </p>
 
             </div>
-           </section>
-        <footer>
-
-        </footer>
+        </section>
     </main>
+    <footer id="main-footer">
+        <div class="parent-footer">
+            <div class="footer-logo">
+                <img src="./assets/logo-footer.png" alt="">
+                <div>
+                    <h3 class="footer-logo-text">Social Links</h3>
+                    <img src="./assets/twitter.png" alt="">
+                    <img src="./assets/facebook.png" alt="">
+                    <img src="" alt="">
+                    <img src="./assets/insta.png" alt="">
+
+                </div>
+            </div>
+            <hr class="footer-line">
+            <p class="copyright">
+                © 2026 Personal Knowledge Vault. All rights reserved.
+            </p>
+        </div>
+    </footer>
+    </div>
+    </footer>
+
 </body>
+
 </html>
